--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,13 +173,11 @@ a:hover {
 #submit, #previous, #next
 {
 
-    position: absolute;
     width: 190px;
     height: 50px;
 	margin-bottom:20px;
     padding: 0 10px;
     text-align: center;
-
     font-size: 30px;
     color: #333 !important;
     background: #70D1FE;
@@ -217,36 +215,72 @@ a:hover {
 /* CSS to style the question slides */
 
 .slide{
-    position: absolute;
-    left: 150px;
-    top: 90px;
-    width: 100%;
+    
+    top: 180px;
+    width: inherit;
     z-index: 1;
     opacity: 0;
     transition: opacity 0.5s;
+    align-content: center;
   }
   .active-slide{
     opacity: 1;
     z-index: 2;
-  }
+    
+}
+
   .quiz-container{
     position: relative;
     height: 200px;
-    margin-top: 40px;
+    margin-top: 100px;
+    max-width: 40%;
+
+    width: inherit;
+    aspect-ratio: 100 / 29;
+
   }
 
   .question {
-    font-size: 3em;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    text-align: center;
+    margin-left: 45px;
+    
   }
 
   .answers {
     color:#70D1FE;
     padding-top: 30px;
     display: grid;
-    font-size: 2em;
+    font-size: 1.5em;
     
   }
 
+  #buttons {
+    margin-top: 450px;
+    margin-left: 380px;
+    
+  }
+
+  .answers label {
+    margin-bottom: 15px;
+    border-style: ridge;
+    text-align: center;
+    border-color: black;
+    }
+
+    .answers:checked {
+        background-color: green;
+    }
+
+ /* CSS to hide radio buttons from answers while still allowing keyboard navigation for accessibility */
+   
+   .answers input {
+    position: fixed;
+    opacity: 0;
+    pointer-events: none;
+   }
+   
 /* Custom CSS for Footer - Boostrap template and styled with Custom CSS*/
 
 .footer-list {
