--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     background-attachment: fixed;
     
 }
-/*CSS to import specialist font*/
+/*CSS to import Simpsons font*/
 @font-face {
     font-family: Simpsonfont;
     src: url("/assets/font/Simpsonfont.ttf") format("truetype");
@@ -32,7 +32,7 @@
 .navbar-brand {
     padding-left: 0.5em;
 }
-
+/* CSS to add interactive element to navbar logo (donut) */
 #donut {
     
         border-radius: 50%;
@@ -50,7 +50,8 @@
     text-decoration: underline;
 }
 
-/* -------------------Modal-------------------  */
+/* --Custom CSS for Modal--- */
+
 .modal-title,
 .contact-header {
     font-family: 'Simpsonfont', serif;
@@ -161,6 +162,7 @@ a:hover {
     padding: 0.5rem 0.5rem;
     background-color: aqua;
 }
+/* end of modal CSS */
 
 #next-question
 {
@@ -188,10 +190,44 @@ h2 {
     padding-left: 20px;
     display: flex;
     flex-direction: column;
-     
+        
 }
 
-@media only screen and (min-width: 770px) {
+#return-btn1 {
+    text-decoration: underline !important;
+}
+
+/* media query for majority of desktop sizes */
+
+@media only screen and (min-width: 770px) and (max-width: 1960px) {
+    .question-container {
+        width: 60%;
+        margin-top: 100px;
+        }
+    h2 {
+        font-size: 2.8em;
+        width: 806.22px;
+        }
+    .answer-box {
+        margin-bottom: 40px !important;
+    }
+    
+    #score-table {
+        margin-left: 160px;
+     }
+
+     .answer-box:hover {
+        background-image: url("../images/clouds.jpg");
+    }
+}
+
+/* media query for ultrawide screens */
+
+@media only screen and (min-width: 1961px) {
+    h2 {
+        width: 980px;
+        margin-left: 60px;
+    }
     .question-container {
         width: 60%;
         margin-top: 100px;
@@ -202,17 +238,26 @@ h2 {
     .answer-box {
         margin-bottom: 40px !important;
     }
-    footer {
-        display: none;
-    }
+  
      h2 {
-        width: 806.22px;
-        margin-left: 30px;
+        width: 1100px;
+        margin-left: 10px;
      }
+     #score-table {
+        margin-left: 200px;
+     }
+     #return-btn1 {
+        text-align: center !important;
+     }
+
+     .answer-box:hover {
+        background-image: url("../images/clouds.jpg");
+    }
 }
 
+/*media query for mobile phones */
+
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
     .question-container {
       width: 100%;
       }
@@ -224,6 +269,7 @@ h2 {
     background-repeat: no-repeat;
     background-attachment: fixed;
     }
+
     h2 {
         margin-right: 50px;
         text-align: center;
@@ -234,16 +280,20 @@ h2 {
     #score-table, #correct_answers, #incorrect_answers {
         font-size: small !important;
     }
-    
-    #gamefooter {
-        background: none;
-        opacity: 1;
-        
+  
+}
+/* Media query to target smaller mobile screens */
+
+@media only screen and (max-width: 375px) {
+    #next-question {
+        margin-bottom: 0px;
+         
+}
+    h2 {
+        margin-top: 0px;
+        margin-bottom: 10px;
     }
 
-    #return-btn1 {
-        display: none;
-    }
 }
 
 /* end of mobile media query */
@@ -292,17 +342,16 @@ h2 {
 #score-table {
     font-size: 30px;
     display: flex;
-    
-
-}
+    }
 
 #incorrect_answers, #correct_answers {
     font-size: 50px;
     padding-inline: 25px;
+
 }
 
 
-/* Custom CSS for Footer - Boostrap template and styled with Custom CSS*/
+/* Custom CSS for Footer - Boostrap template and styled with custom CSS*/
 
 .footer-list {
     display: flex;
