--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,9 @@ a:hover {
     background: #70D1FE;
     font-family: 'Simpsonfont';
     border-radius: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
@@ -293,8 +296,9 @@ h2 {
         text-align: center;
     }
 
+    
     #next-question {
-        margin-left: 60px;
+        margin-left: 70px;
     }
 
     #score-table,
@@ -312,6 +316,16 @@ h2 {
             margin-left: 100px;
         }
 
+        .answer-box {
+            width: 300px;
+            height: 70px;
+            font-size: larger;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            
+        }
+
 }
 
 /* Media query to target smaller mobile screens */
@@ -319,6 +333,7 @@ h2 {
 @media only screen and (max-width: 375px) {
     #next-question {
         margin-bottom: 0px;
+        margin-left: 55px;
 
     }
 
@@ -335,7 +350,19 @@ h2 {
     #return-btn1 {
         margin-left: 100px;
     }
+
+    .answer-box {
+        width: 300px;
+        height: 40px;
+        font-size: medium;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        
+    }
 }
+
+
 
 /* end of mobile media query */
 
@@ -346,10 +373,6 @@ h2 {
     float: left;
     text-align: center;
     cursor: pointer;
-}
-
-.btn img {
-    margin-top: 10px;
 }
 
 .btn span {
